--- a/index.html
+++ b/index.html
@@ -224,10 +224,7 @@
         Certified rock climbing instructor for the French Alpine Club Federation.</p>
 
         <h2 id="contact">Contact</h2>
-        <p>Profiles: <a href="https://linkedin.com/in/mehdibouaziz">LinkedIn</a> | <a href="https://github.com/mbouaziz">GitHub</a> | <a href="https://gitlab.com/mbouaziz">GitLab</a> | <a href="https://scholar.google.com/citations?user=dELWOYoAAAAJ">Google Scholar</a></p>
-        <p>
-          <a href="mehdi-bouaziz.asc">My gpg public key</a>
-        </p>
+        <p><a href="https://linkedin.com/in/mehdibouaziz">LinkedIn</a> | <a href="cv.pdf">CV</a>| <a href="https://github.com/mbouaziz">GitHub</a> | <a href="https://gitlab.com/mbouaziz">GitLab</a> | <a href="https://scholar.google.com/citations?user=dELWOYoAAAAJ">Google Scholar</a> | <a href="mehdi-bouaziz.asc">gpg public key</a></p>
 
         <h3>Place</h3>
         <p>These days, you can probably find me in Lille, France.
