--- a/index.html
+++ b/index.html
@@ -80,75 +80,77 @@
 
         <h2 id="publications">Publications</h2>
         
-        <p>Guillaume Bau, Antoine Miné, Vincent Botbol, and Mehdi Bouaziz, <a href="p/BauMineBotbolBouaziz-SOAP22.pdf">Abstract Interpretation of Michelson smart-contracts</a>, in <i>Static Analysis and Operations of Programming Languages (SOAP@PLDI 2022)</i>, ACM, June 2022. <a href="p/BauMineBotbolBouaziz-SOAP22.pdf">[Paper]</a></p>
+        <p>Guillaume Bau, Antoine Miné, Vincent Botbol, and Mehdi Bouaziz, Abstract Interpretation of Michelson smart-contracts, in <i>Static Analysis and Operations of Programming Languages (SOAP@PLDI 2022)</i>, ACM, June 2022. <a href="p/BauMineBotbolBouaziz-SOAP22.pdf">📄</a></p>
 
-        <p>Ezgi Çiçek, Mehdi Bouaziz, Sungkeun Cho, and Dino Distefano, <a href="p/CicekBouazizChoDistefano-SAS20.pdf">Static Resource Analysis at Scale</a>, in <i>Static Analysis Symposium (SAS 2020)</i>, Springer, November 2020. <a href="p/CicekBouazizChoDistefano-SAS20.pdf">[Paper]</a></p>
+        <p>Ezgi Çiçek, Mehdi Bouaziz, Sungkeun Cho, and Dino Distefano, Static Resource Analysis at Scale, in <i>Static Analysis Symposium (SAS 2020)</i>, Springer, November 2020. <a href="p/CicekBouazizChoDistefano-SAS20.pdf">📄</a></p>
 
-        <p><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, and <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">A case for static analyzers in the cloud</a>, in <i>8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</i>, Elsevier, March 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">[Paper]</a></p>
+        <p><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, and <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, A case for static analyzers in the cloud, in <i>8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</i>, Elsevier, March 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, and <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">Inference of Necessary Field Conditions with Abstract Interpretation</a>, in <i>10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</i>, Springer, December 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">[Paper]</a></p>
+        <p>Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, and <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, Inference of Necessary Field Conditions with Abstract Interpretation, in <i>10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</i>, Springer, December 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-NSAD12.pdf"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>, in <i>4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</i>, Elsevier, September 2012. <a href="p/Bouaziz-NSAD12.pdf">[Paper]</a></p>
+        <p>Mehdi Bouaziz, <tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable, in <i>4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</i>, Elsevier, September 2012. <a href="p/Bouaziz-NSAD12.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-SIT11.pdf">Jsx: a symbolic evaluator for JavaScript</a>, Stevens Institute of Technology, February 2011.</p>
+        <p>Mehdi Bouaziz, Jsx: a symbolic evaluator for JavaScript, Stevens Institute of Technology, February 2011. <a href="p/Bouaziz-SIT11.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-ENS10.pdf"><tt>TreeKs</tt>: un foncteur pour faire passer les domaines numériques à l'échelle</a>, Master's thesis, École normale supérieure, August 2010.</p>
+        <p>Mehdi Bouaziz, <tt>TreeKs</tt>: un foncteur pour faire passer les domaines numériques à l'échelle, Master's thesis, École normale supérieure, August 2010. <a href="p/Bouaziz-ENS10.pdf">📄</a></p>
 
-        <p>Mathieu Barbin and Mehdi Bouaziz, <a href="p/BarbinBouaziz-MLstate09.pdf">A Unified Library of Primitives for QML/Opa Compilers and Interpreters</a>, MLstate, September 2009.</p>
+        <p>Mathieu Barbin and Mehdi Bouaziz, A Unified Library of Primitives for QML/Opa Compilers and Interpreters, MLstate, September 2009. <a href="p/BarbinBouaziz-MLstate09.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-MLstate09.pdf">Optimized Client-Server Distribution of Ajax Web Applications</a>, MLstate, September 2009.</p>
+        <p>Mehdi Bouaziz, Optimized Client-Server Distribution of Ajax Web Applications, MLstate, September 2009. <a href="p/Bouaziz-MLstate09.pdf">📄</a></p>
 
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-MLstate08.pdf">Approximation statique de propriétés d'applications web</a>, MLstate, September 2008.</p>
+        <p>Mehdi Bouaziz, Approximation statique de propriétés d'applications web, MLstate, September 2008. <a href="p/Bouaziz-MLstate08.pdf">📄</a></p>
 
         <p class="more">
-          <a href="p/pubs.bib">▶ All publications (BibTeX)</a>
+          <a href="p/pubs.bib">🔗 All publications (BibTeX)</a>
         </p>
 
         <h2 id="talks">Talks</h2>
         
-        <p><b><a href="https://www.youtube.com/watch?v=-MNRtp9lWl0">SWERC 2023-2024 Closing ceremony</a></b>. <i>Southwestern European Programming Contest</i>, January 2024.</p>
+        <p><b>SWERC 2023-2024 Problem Analysis</b>. <i><a href="https://swerc.eu/2023/" class="place">Southwestern European Programming Contest</a></i>, January 2024. <a href="https://www.youtube.com/watch?v=-MNRtp9lWl0">📺</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=ckGP0Agv-ck">Adaptive Issuance</a></b>. <i>YouTube presentation</i>, September 2023.</p>
+        <p><b>Dev Success: What is Adaptive Issuance?</b>. <i>YouTube presentation</i>, September 2023. <a href="https://www.youtube.com/watch?v=ckGP0Agv-ck">📺</a></p>
 
-        <p><b><a href="https://hackmd.io/YlEX0NVrQpeMoxYJNqcyrA#/">Program Analysis Sessions</a></b>. <i>Internal presentation</i>, April 2023.</p>
+        <p><b>Adaptive Inflation Overview</b>. <i>Internal presentation</i>, April 2023. <a href="https://hackmd.io/YlEX0NVrQpeMoxYJNqcyrA#/">📄</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=MGPggAw7Vws">Analysis &amp; Verification of the Resource Consumption of Tezos Contracts (Ciao-PP)</a></b>. <i>NL Research Seminar</i>, April 2022.</p>
+        <p><b>Analysis &amp; Verification of the Resource Consumption of Tezos Contracts (Ciao-PP)</b>. <i>NL Research Seminar (host)</i>, April 2022. <a href="https://www.youtube.com/watch?v=MGPggAw7Vws">📺</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=BGKaq9I9KKw">Helmholtz - A Verifier for Tezos Smart Contracts</a></b>. <i>NL Research Seminar</i>, April 2021.</p>
+        <p><b>Helmholtz - A Verifier for Tezos Smart Contracts</b>. <i>NL Research Seminar (host)</i>, April 2021. <a href="https://www.youtube.com/watch?v=BGKaq9I9KKw">📺</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=55ZUWGQkylw">SWERC 2020-21 Problem Analysis</a></b>. <i><a href="https://swerc.eu/" class="place">Southwestern European Programming Contest</a></i>, March 2021.</p>
+        <p><b>SWERC 2020-21 Problem Analysis</b>. <i><a href="https://swerc.eu/2020/" class="place">Southwestern European Programming Contest</a></i>, March 2021. <a href="https://www.youtube.com/watch?v=55ZUWGQkylw">📺</a></p>
 
-        <p><b><a href="https://forum.tezosagora.org/t/the-latest-tquorum-session-tezos-town-hall-exploring-edo-is-now-available-to-stream/2650">Tezos Town Hall: Exploring Edo</a></b>. <i><a href="https://open.spotify.com/show/19iUZ0t4POx91pQueHThNt">Spotify podcast</a></i>, January 2021.</p>
+        <p><b>Tezos Town Hall: Exploring Edo</b>. <i>Podcast</i>, January 2021. <a href="https://open.spotify.com/show/19iUZ0t4POx91pQueHThNt" title="Listen on Spotify">🎧</a> <a href="https://forum.tezosagora.org/t/the-latest-tquorum-session-tezos-town-hall-exploring-edo-is-now-available-to-stream/2650">🔗</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=G8bia4VEVXA">SWERC 2019-2020 Problem Analysis</a></b>. <i><a href="https://swerc.eu/" class="place">Southwestern European Programming Contest</a></i>, January 2020.</p>
+        <p><b>SWERC 2019-2020 Problem Analysis</b>. <i><a href="https://swerc.eu/2019/" class="place">Southwestern European Programming Contest</a></i>, January 2020. <a href="https://www.youtube.com/watch?v=G8bia4VEVXA">📺</a></p>
 
-        <p><b><a href="https://popl19.sigplan.org/details/POPL-2019-TutorialFest/2/-T8-Building-Your-Own-Modular-Static-Analyser-with-Infer">Building Your Own Modular Static Analyser with Infer</a></b>. <i>POPL 2019 TutorialFest</i>, Lisbon, Portugal, January 2019.</p>
+        <p><b>Building Your Own Modular Static Analyser with Infer</b>. <i>POPL 2019 TutorialFest</i>, Lisbon, Portugal, January 2019. <a href="https://popl19.sigplan.org/details/POPL-2019-TutorialFest/2/-T8-Building-Your-Own-Modular-Static-Analyser-with-Infer">🔗</a></p>
 
-        <p><b><a href="https://www.youtube.com/watch?v=JgAMmZRRSlc">SWERC 2018 Problem Analysis Session</a></b>. <i><a href="https://swerc.eu/" class="place">Southwestern European Programming Contest</a></i>, 2018.</p>
+        <p><b>SWERC 2018 Problem Analysis</b>. <i><a href="https://swerc.eu/2018/" class="place">Southwestern European Programming Contest</a></i>, 2018. <a href="https://www.youtube.com/watch?v=JgAMmZRRSlc">📺</a></p>
+
+        <p><b>SWERC 2017 Problem Analysis</b>. <i><a href="https://swerc.eu/2017/" class="place">Southwestern European Programming Contest</a></i>, 2017.</p>
 
         <p><b>Invited Talk</b>. <i><a href="https://ppdp16.webs.upv.es/francesco.html">Principles and Practice of Declarative Programming (PPDP) 2016</a></i>, Edinburgh, Scotland, September 2016.</p>
 
         <p><b>CodeContracts &amp; Clousot</b>. <i>Course on Abstract Interpretation</i>, <a href="http://english.ecnu.edu.cn" class="place">East China Normal University</a>, Shanghai, China, November 26, 2013.</p>
 
-        <p><b>Scalable Numerical Abstract Domains</b>. <i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, China, November 23, 2013. <a href="p/Bouaziz-AVDCPS13-slides.pdf">[Slides]</a></p>
+        <p><b>Scalable Numerical Abstract Domains</b>. <i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, China, November 23, 2013. <a href="p/Bouaziz-AVDCPS13-slides.pdf">📊</a></p>
 
-        <p><b>Spécification et vérification de programmes avec CodeContracts</b>. <i>2<sup>e</sup> Forum méthodes formelles (FMF 2013)</i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France, June 28, 2013. <a href="p/LogozzoBouaziz-FMF2-slides.pdf">[Slides]</a></p>
+        <p><b>Spécification et vérification de programmes avec CodeContracts</b>. <i>2<sup>e</sup> Forum méthodes formelles (FMF 2013)</i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France, June 28, 2013. <a href="p/LogozzoBouaziz-FMF2-slides.pdf">📊</a></p>
 
-        <p><b>A case for static analyzers in the cloud</b>. <i><a href="https://www.etaps.org/2013/bytecode">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, Rome, Italy, March 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">[Slides]</a></p>
+        <p><b>A case for static analyzers in the cloud</b>. <i><a href="https://www.etaps.org/2013/bytecode">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, Rome, Italy, March 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">📊</a></p>
 
-        <p><b>Inference of Necessary Field Conditions with Abstract Interpretation</b>. <i><a href="https://conf.researchr.org/home/aplas-2012">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, Kyoto, Japan, December 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">[Slides]</a></p>
+        <p><b>Inference of Necessary Field Conditions with Abstract Interpretation</b>. <i><a href="https://conf.researchr.org/home/aplas-2012">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, Kyoto, Japan, December 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">📊</a></p>
 
-        <p><b><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</b>. <i><a href="https://staticanalysis.org/nsad2012/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, Deauville, France, September 2012. <a href="p/Bouaziz-NSAD12-slides.pdf">[Slides]</a></p>
+        <p><b><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</b>. <i><a href="https://staticanalysis.org/nsad2012/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, Deauville, France, September 2012. <a href="p/Bouaziz-NSAD12-slides.pdf">📊</a></p>
 
-        <p><b>Inference of object invariants</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a> Faculty Summit 2012</i>, Redmond, WA, USA, July 2012. <a href="p/BouazizLogozzo-MSR12-slides.pdf">[Slides]</a></p>
+        <p><b>Inference of object invariants</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a> Faculty Summit 2012</i>, Redmond, WA, USA, July 2012. <a href="p/BouazizLogozzo-MSR12-slides.pdf">📊</a></p>
 
-        <p><b>Object invariants inference with CodeContracts</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a></i>, Redmond, WA, USA, July 2011. <a href="p/BouazizLogozzo-MSR11-slides.pdf">[Slides]</a></p>
+        <p><b>Object invariants inference with CodeContracts</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a></i>, Redmond, WA, USA, July 2011. <a href="p/BouazizLogozzo-MSR11-slides.pdf">📊</a></p>
 
-        <p><b>Distributed whitebox fuzzing for security testing</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a></i>, Redmond, WA, USA, July 2011. <a href="p/BouazizBounimova-MSR11-slides.pdf">[Slides]</a></p>
+        <p><b>Distributed whitebox fuzzing for security testing</b>. <i><a href="https://www.microsoft.com/en-us/research/" class="place">Microsoft Research</a></i>, Redmond, WA, USA, July 2011. <a href="p/BouazizBounimova-MSR11-slides.pdf">📊</a></p>
 
-        <p><b>Symbolic execution for JavaScript</b>. <i><a href="https://www.stevens.edu/" class="place">Stevens Institute of Technology</a></i>, Hoboken, NJ, USA, February 2011. <a href="p/BouazizChudnovNaumann-SIT11-slides.pdf">[Slides]</a></p>
+        <p><b>Symbolic execution for JavaScript</b>. <i><a href="https://www.stevens.edu/" class="place">Stevens Institute of Technology</a></i>, Hoboken, NJ, USA, February 2011. <a href="p/BouazizChudnovNaumann-SIT11-slides.pdf">📊</a></p>
 
-        <p><b><tt>TreeKs</tt>: un foncteur pour faire passer les domaines numériques à l'échelle</b>. <i>Master's defense</i>, <a href="https://www.ens.psl.eu/" class="place">École normale supérieure</a>, Paris, France, August 2010. <a href="p/Bouaziz-ENS10-slides.pdf">[Slides]</a></p>
+        <p><b><tt>TreeKs</tt>: un foncteur pour faire passer les domaines numériques à l'échelle</b>. <i>Master's defense</i>, <a href="https://www.ens.psl.eu/" class="place">École normale supérieure</a>, Paris, France, August 2010. <a href="p/Bouaziz-ENS10-slides.pdf">📊</a></p>
 
         <p><b>Optimized Client-Server Distribution of Ajax Web Applications</b>. <i>MLstate</i>, Edinburgh, UK, August 2009.</p>
 
@@ -203,7 +205,7 @@
 
         <p><b>Competition Judge:</b></p>
         <ul>
-          <li>Judge for <a href="https://swerc.eu/">SWERC</a> (Southwestern European Regional Contest): 2017, 2018, 2019, 2020-2021, 2023-2024</li>
+          <li>Judge for <a href="https://swerc.eu/">SWERC</a> (Southwestern European Regional Contest): <a href="https://swerc.eu/2017/" class="place">2017</a>, <a href="https://swerc.eu/2018/" class="place">2018</a>, <a href="https://swerc.eu/2019/" class="place">2019</a>, <a href="https://swerc.eu/2020/" class="place">2020-2021</a>, <a href="https://swerc.eu/2023/" class="place">2023-2024</a></li>
         </ul>
 
         <h2 id="climbing">Rock Climbing</h2>
@@ -211,8 +213,8 @@
         <p><b>Volunteer at International Rock Climbing Competitions</b> (September 2021 – October 2023)<br/>
         Balayer for Lead and Speed, brusher for Bouldering, usher, cameraman, handler, logistics at:
         <ul>
-          <li>the Boulder&amp;Lead European Qualifier for the Olympic Games in Laval, 2023</li>
-          <li>the Boulder&amp;Lead Combined + Speed International Climbing Series in Laval, 2022</li>
+          <li>the <a href="https://www.ifsc-climbing.org/index.php/component/ifsc/?view=event&WetId=1308" class="place">Boulder&amp;Lead European Qualifier for the Olympic Games</a> in Laval, 2023</li>
+          <li>the <a href="https://www.ifsc-climbing.org/index.php/component/ifsc/?view=event&WetId=1275" class="place">Boulder&amp;Lead Combined + Speed International Climbing Series</a> in Laval, 2022</li>
           <li>the Lead + Speed European Championship in Laval, 2021</li>
         </ul>
         </p>
@@ -224,7 +226,7 @@
         Certified rock climbing instructor for the French Alpine Club Federation.</p>
 
         <h2 id="contact">Contact</h2>
-        <p><a href="https://linkedin.com/in/mehdibouaziz">LinkedIn</a> | <a href="cv.pdf">CV</a>| <a href="https://github.com/mbouaziz">GitHub</a> | <a href="https://gitlab.com/mbouaziz">GitLab</a> | <a href="https://scholar.google.com/citations?user=dELWOYoAAAAJ">Google Scholar</a> | <a href="mehdi-bouaziz.asc">gpg public key</a></p>
+        <p><a href="https://linkedin.com/in/mehdibouaziz">LinkedIn</a> | <a href="cv.pdf">CV</a> | <a href="https://github.com/mbouaziz">GitHub</a> | <a href="https://gitlab.com/mbouaziz">GitLab</a> | <a href="https://scholar.google.com/citations?user=dELWOYoAAAAJ">Google Scholar</a> | <a href="mehdi-bouaziz.asc">gpg public key</a></p>
 
         <h3>Place</h3>
         <p>These days, you can probably find me in Lille, France.
